# 2DEngine

./: .directory  .gitignore  CMakeLists.txt  README.md  application.cpp  application.h  datastorage.cpp  datastorage.h  drawmanager.cpp  drawmanager.h  eventhandler.cpp  eventhandler.h  eventmanager.cpp  eventmanager.h  fstream.cpp  fstream.h  gameobject.h  hack.txt  hackertyper.cpp  hackertyper.h  main.cpp
2DEngine-develop/src/: main.cpp
2DEngine-develop/src/core/objects/: gameobject.h  picture.cpp
2DEngine-develop/src/core/storage/: datastorage.h
src/: application.cpp  application.h  creatures.cpp  creatures.h  datastorage.h  drawmanager.cpp  eventhandler.cpp  eventmanager.cpp  eventmanager.h  gameobject.h  main.cpp  movablecreatures.h  picture.h  player.h  textobject.cpp  textobject.h
src/core/: application.cpp  application.h  engine.cpp  engine.h
src/core/handlers/: eventhandler.cpp  eventhandler.h
src/core/management/: drawmanager.cpp  drawmanager.h  eventmanager.cpp  eventmanager.cpp.autosave  eventmanager.h  logicsmanager.cpp  logicsmanager.h  physicsmanager.cpp  physicsmanager.h
src/core/object_components/: basicscript.cpp  basicscript.h  gameobjectcomponent.cpp  gameobjectcomponent.h  physicalbody.cpp  physicalbody.h  rectcollider.cpp  rectcollider.h  renderer.cpp  renderer.h
src/core/objects/: basicscript.h  gameobject.cpp  gameobject.h  renderer.h  script.h  textobject.cpp
src/core/storage/: datastorage.cpp  datastorage.h  datastorage.h.autosave
src/core/tools/: input.cpp  input.h  time.cpp  time.h  tools.cpp  tools.h
src/scripts/: picturescript.cpp  picturescript.cpp.autosave  picturescript.h  scripts.cpp  scripts.h  scripts.h.autosave
